--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -42,11 +42,11 @@ $dark-text: #e5e5e5
 $dark-bg: $cold-black
 $dark-pill: scale-color($brand-primary, $lightness: -80%)
 
-$font-size: 12px
+$font-size: 14px
 $font-weight: 500
 $letter-spacing-brand: .7px
 
-$font-family-examples: -apple-system, 'Roboto', BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
+$font-family-examples: -apple-system, Avenir, 'Roboto', Avenir, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
 $font-family: 'Montserrat', $font-family-examples
 
 $shadow--large: 0 24px 24px 0 rgba(0, 179, 255, 0.24)
