feat(docs): small tweak to sass variables

--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -46,8 +46,8 @@ $font-size: 14px
 $font-weight: 500
 $letter-spacing-brand: .7px
 
-$font-family-examples: -apple-system, Avenir, 'Roboto', Avenir, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
-$font-family: 'Montserrat', $font-family-examples
+$font-family-examples: -apple-system, Avenir, "Roboto", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
+$font-family: "Montserrat", $font-family-examples
 
 $shadow--large: 0 24px 24px 0 rgba(0, 179, 255, 0.24)
 $shadow--medium: 0 6px 6px 0 rgba($brand-primary, 0.38)
