feat(docs): soften the body text colors (for both themes)

--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -35,10 +35,10 @@ $header-btn-color--dark: #929397
 $header-btn-hover-color--dark: #fff
 
 $light-pill: #f5f5f5 // $grey-2
-$light-text: #1d1d1d // $dark
+$light-text: #474747
 $light-bg: #fafafa
 
-$dark-text: #e5e5e5
+$dark-text: #c2c2c2
 $dark-bg: $cold-black
 $dark-pill: scale-color($brand-primary, $lightness: -80%)
 
