feat: design updates

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -125,6 +125,7 @@ ul
 .doc-h2
   font-size: 1.8rem
   font-weight: 600
+  padding-bottom: 8px !important
   border-bottom: 1px solid $separator-color
 
 .doc-h3
@@ -447,7 +448,7 @@ body.body--dark
       background-color: scale-color($negative, $lightness: -80%)
 
   .doc-h2
-    border-color: $brand-primary
+    border-color: $separator-dark-color
 
   kbd
     color: $dark-text
