--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -38,23 +38,20 @@ $light-pill: #f5f5f5 // $grey-2
 $light-text: #474747
 $light-bg: #fafafa
 
-$dark-text: #c2c2c2
+$dark-text: #cbcbcb
 $dark-bg: $cold-black
 $dark-pill: scale-color($brand-primary, $lightness: -80%)
 
-$font-size: 14px
+$font-size: 16px
 $font-weight: 500
 $letter-spacing-brand: .7px
 
 $font-family-examples: -apple-system, Avenir, "Roboto", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
 $font-family: "Montserrat", $font-family-examples
 
-$shadow--large: 0 24px 24px 0 rgba(0, 179, 255, 0.24)
+$shadow--large: 0 24px 24px 0 rgba(0,179,255, 0.24)
 $shadow--medium: 0 6px 6px 0 rgba($brand-primary, 0.38)
 $shadow--small: 0 6px 6px 0 rgba($brand-primary, 0.28)
-
-$shadow--primary: 0 0 6px 3px $brand-primary
-$shadow--primary-down: 0 0 8px 1px rgba($brand-primary, 0.8)
 
 // also update QHeader :height-hint
 $header-height: 128px
