--- a/docs/src/layouts/doc-layout/DocPageMenu.sass
+++ b/docs/src/layouts/doc-layout/DocPageMenu.sass
@@ -1,12 +1,25 @@
 .doc-page-menu
+  font-size: ($font-size - 1px)
 
   .q-icon
-    font-size: 18px
+    font-size: 28px
 
   .q-item__section--avatar
     color: $brand-primary
     min-width: 28px
     padding-right: 12px
+
+  .q-expansion-item__content
+    margin-left: 20px
+    padding-left: 4px
+    border-left: 1px solid $separator-color
+
+    .q-expansion-item__content
+      margin-left: 28px
+      padding-left: 2px !important
+      .q-item
+        padding-left: 18px !important
+        margin-left: 2px
 
   .q-expansion-item__toggle-icon
     color: $grey-5
@@ -21,4 +34,7 @@
     .q-item__section--avatar
       min-width: 16px
       padding-left: 8px
-      padding-right: 4px
+      padding-right: 0
+
+body.body--dark .doc-page-menu .q-expansion-item__content
+  border-left-color: $separator-dark-color
