--- a/docs/src/css/fonts.sass
+++ b/docs/src/css/fonts.sass
@@ -4,6 +4,42 @@
   font-weight: 400
   src: url(https://cdn.quasar.dev/fonts/materialicons/v139/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2')
 
+@font-face
+  font-family: 'Roboto'
+  font-style: normal
+  font-weight: 100
+  src: url(https://cdn.quasar.dev/fonts/roboto/KFOkCnqEu92Fr1MmgVxIIzQ.woff) format('woff')
+
+@font-face
+  font-family: 'Roboto'
+  font-style: normal
+  font-weight: 300
+  src: url(https://cdn.quasar.dev/fonts/roboto/KFOlCnqEu92Fr1MmSU5fBBc-.woff) format('woff')
+
+@font-face
+  font-family: 'Roboto'
+  font-style: normal
+  font-weight: 400
+  src: url(https://cdn.quasar.dev/fonts/roboto/KFOmCnqEu92Fr1Mu4mxM.woff) format('woff')
+
+@font-face
+  font-family: 'Roboto'
+  font-style: normal
+  font-weight: 500
+  src: url(https://cdn.quasar.dev/fonts/roboto/KFOlCnqEu92Fr1MmEU9fBBc-.woff) format('woff')
+
+@font-face
+  font-family: 'Roboto'
+  font-style: normal
+  font-weight: 700
+  src: url(https://cdn.quasar.dev/fonts/roboto/KFOlCnqEu92Fr1MmWUlfBBc-.woff) format('woff')
+
+@font-face
+  font-family: 'Roboto'
+  font-style: normal
+  font-weight: 900
+  src: url(https://cdn.quasar.dev/fonts/roboto/KFOlCnqEu92Fr1MmYUtfBBc-.woff) format('woff')
+
 /* cyrillic-ext */
 @font-face
   font-family: 'Montserrat'
