--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -42,12 +42,14 @@ $dark-text: #cbcbcb
 $dark-bg: $cold-black
 $dark-pill: scale-color($brand-primary, $lightness: -80%)
 
-$font-size: 16px
-$font-weight: 500
+$font-size: 18px
+$font-weight-marketing: 500
+$font-weight-technical: 400
 $letter-spacing-brand: .7px
 
-$font-family-examples: -apple-system, Avenir, "Roboto", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
-$font-family: "Montserrat", $font-family-examples
+$font-family-technical: "Roboto", -apple-system, Avenir, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
+$font-family-examples: $font-family-technical
+$font-family-marketing: "Montserrat", $font-family-technical
 
 $shadow--large: 0 24px 24px 0 rgba(0,179,255, 0.24)
 $shadow--medium: 0 6px 6px 0 rgba($brand-primary, 0.38)
