feat(docs): line-height adjustment

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -37,6 +37,7 @@
 // resets .doc-technical above to Quasar original
 .doc-example-typography
   font-size: 14px
+  line-height: 1.5em
 
 strong
   font-weight: bold
@@ -46,7 +47,7 @@ ul
 
 .doc-token
   display: inline-block
-  padding: 4px 8px
+  padding: 4px 6px
   font-size: $font-size
   line-height: $font-size
   border-radius: $generic-border-radius
