--- a/docs/src/css/prism-theme.sass
+++ b/docs/src/css/prism-theme.sass
@@ -3,7 +3,7 @@
   position: relative
   font-size: $font-size
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
-  line-height: 1.5
+  line-height: 1.5em
   tab-size: 2
   text-align: left
   white-space: pre
