feat(docs): font tweaks

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -29,6 +29,10 @@
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: auto
 
+.doc-marketing
+  font-size: $font-size-marketing
+  line-height: 1.5
+
 .doc-marketing,
 .doc-header-menu
   font-family: $font-family-marketing
