--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -43,6 +43,7 @@ $dark-bg: $cold-black
 $dark-pill: scale-color($brand-primary, $lightness: -80%)
 
 $font-size: 18px
+$font-size-marketing: 16px
 $font-weight-marketing: 500
 $font-weight-technical: 400
 $letter-spacing-brand: .7px
