feat(docs): tweak headings with badges

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -189,8 +189,8 @@ ul
   padding: 0
   line-height: 1.1em
   margin: 2.5em 0 1em
-  > *
-    margin: 0 8px
+  .q-badge
+    margin-left: 8px
 
 .doc-img
   max-width: 100%
