--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -215,6 +215,8 @@ kbd
   box-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4)
 
 .doc-gdpr
+  font-family: $font-family-marketing
+  font-weight: $font-weight-marketing
   max-width: 360px
 
 .q-page > .q-badge + .doc-example
