fix(docs): use fixed montserrat font version #15639

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -44,7 +44,7 @@
   line-height: 1.5em
 
 strong
-  font-weight: bold
+  font-weight: 700
 
 ul
   margin: 0 0 16px
@@ -216,8 +216,10 @@ kbd
 
 .doc-gdpr
   font-family: $font-family-marketing
-  font-weight: $font-weight-marketing
   max-width: 360px
+  &,
+  .q-btn
+    font-weight: 700
 
 .q-page > .q-badge + .doc-example
   margin-top: 0
@@ -280,7 +282,7 @@ body.q-scroll--lock .q-page
   &--medium
     color: $brand-primary
     font-size: 18px
-    font-weight: bold
+    font-weight: 700
     letter-spacing: 4.5px
 
     @media (min-width: $breakpoint-sm-min)
@@ -324,7 +326,7 @@ body.q-scroll--lock .q-page
 .call-to-action-btn
   background: $brand-accent
   color: #fff
-  font-weight: bold
+  font-weight: 700
   font-size: $font-size
   letter-spacing: 2.63px
 
