--- a/docs/src/css/fonts.sass
+++ b/docs/src/css/fonts.sass
@@ -40,92 +40,93 @@
   font-weight: 900
   src: url(https://cdn.quasar.dev/fonts/roboto/KFOlCnqEu92Fr1MmYUtfBBc-.woff) format('woff')
 
-/* cyrillic-ext */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-weight: 100 900
-  font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUQjIg1_i6t8kCHKm459WxRxC7m0dR9pBOi.woff2) format('woff2')
-  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F
-
-/* cyrillic */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-weight: 100 900
-  font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUQjIg1_i6t8kCHKm459WxRzS7m0dR9pBOi.woff2) format('woff2')
-  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116
-
-/* vietnamese */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-weight: 100 900
-  font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUQjIg1_i6t8kCHKm459WxRxi7m0dR9pBOi.woff2) format('woff2')
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB
-
-/* latin-ext */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-weight: 100 900
-  font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUQjIg1_i6t8kCHKm459WxRxy7m0dR9pBOi.woff2) format('woff2')
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
-
-/* latin */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-weight: 100 900
-  font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUQjIg1_i6t8kCHKm459WxRyS7m0dR9pA.woff2) format('woff2')
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-
-/* cyrillic-ext */
+/* montserrat-cyrillic-variable-wghtOnly-normal */
 @font-face
   font-family: 'Montserrat'
   font-style: normal
-  font-weight: 100 900
   font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUSjIg1_i6t8kCHKm459WRhyyTh89ZNpQ.woff2) format('woff2')
-  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-cyrillic-variable-wghtOnly-normal.woff2') format('woff2')
+  unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116
 
-/* cyrillic */
+/* montserrat-cyrillic-ext-variable-wghtOnly-normal */
 @font-face
   font-family: 'Montserrat'
   font-style: normal
-  font-weight: 100 900
   font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUSjIg1_i6t8kCHKm459W1hyyTh89ZNpQ.woff2) format('woff2')
-  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2') format('woff2')
+  unicode-range: U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F
 
-/* vietnamese */
+/* montserrat-latin-variable-wghtOnly-normal */
 @font-face
   font-family: 'Montserrat'
   font-style: normal
-  font-weight: 100 900
   font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUSjIg1_i6t8kCHKm459WZhyyTh89ZNpQ.woff2) format('woff2')
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-latin-variable-wghtOnly-normal.woff2') format('woff2')
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
 
-/* latin-ext */
+/* montserrat-latin-ext-variable-wghtOnly-normal */
 @font-face
   font-family: 'Montserrat'
   font-style: normal
-  font-weight: 100 900
   font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUSjIg1_i6t8kCHKm459WdhyyTh89ZNpQ.woff2) format('woff2')
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-latin-ext-variable-wghtOnly-normal.woff2') format('woff2')
+  unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF
 
-/* latin */
+/* montserrat-vietnamese-variable-wghtOnly-normal */
 @font-face
   font-family: 'Montserrat'
   font-style: normal
-  font-weight: 100 900
   font-display: swap
-  src: url(https://cdn.quasar.dev/fonts/montserrat/v25/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2) format('woff2')
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-vietnamese-variable-wghtOnly-normal.woff2') format('woff2')
+  unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+1EA0-1EF9,U+20AB
+
+
+/* montserrat-cyrillic-variable-wghtOnly-italic */
+@font-face
+  font-family: 'Montserrat'
+  font-style: italic
+  font-display: swap
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-cyrillic-variable-wghtOnly-italic.woff2') format('woff2')
+  unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116
+
+/* montserrat-cyrillic-ext-variable-wghtOnly-italic */
+@font-face
+  font-family: 'Montserrat'
+  font-style: italic
+  font-display: swap
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2') format('woff2')
+  unicode-range: U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F
+
+/* montserrat-latin-variable-wghtOnly-italic */
+@font-face
+  font-family: 'Montserrat'
+  font-style: italic
+  font-display: swap
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-latin-variable-wghtOnly-italic.woff2') format('woff2')
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
+
+/* montserrat-latin-ext-variable-wghtOnly-italic */
+@font-face
+  font-family: 'Montserrat'
+  font-style: italic
+  font-display: swap
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-latin-ext-variable-wghtOnly-italic.woff2') format('woff2')
+  unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF
+
+/* montserrat-vietnamese-variable-wghtOnly-italic */
+@font-face
+  font-family: 'Montserrat'
+  font-style: italic
+  font-display: swap
+  font-weight: 100 900
+  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-vietnamese-variable-wghtOnly-italic.woff2') format('woff2')
+  unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+1EA0-1EF9,U+20AB
