--- a/docs/src/css/prism-theme.sass
+++ b/docs/src/css/prism-theme.sass
@@ -45,9 +45,9 @@ body.body--light
     &.punctuation
       color: #5F6364
     &.important
-      font-weight: normal
+      font-weight: 400
     &.bold
-      font-weight: bold
+      font-weight: 700
     &.italic
       font-style: italic
     &.entity
@@ -161,7 +161,7 @@ body.body--dark
 
   .token.important,
   .token.bold
-    font-weight: bold
+    font-weight: 700
 
   .token.italic
     font-style: italic
