--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -29,14 +29,14 @@
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: auto
 
-.doc-marketing
-  font-size: $font-size-marketing
+.doc-brand
+  font-size: $font-size-brand
   line-height: 1.5
 
-.doc-marketing,
+.doc-brand,
 .doc-header-menu
-  font-family: $font-family-marketing
-  font-weight: $font-weight-marketing
+  font-family: $font-family-brand
+  font-weight: $font-weight-brand
 
 // resets .doc-technical above to Quasar original
 .doc-example-typography
@@ -215,7 +215,7 @@ kbd
   box-shadow: inset 0 -2px 0 0 #cdcde6,inset 0 0 1px 1px #fff,0 1px 2px 1px rgba(30,35,90,0.4)
 
 .doc-gdpr
-  font-family: $font-family-marketing
+  font-family: $font-family-brand
   max-width: 360px
   &,
   .q-btn
