--- a/docs/src/css/fonts.sass
+++ b/docs/src/css/fonts.sass
@@ -40,93 +40,22 @@
   font-weight: 900
   src: url(https://cdn.quasar.dev/fonts/roboto/KFOlCnqEu92Fr1MmYUtfBBc-.woff) format('woff')
 
-/* montserrat-cyrillic-variable-wghtOnly-normal */
-@font-face
-  font-family: 'Montserrat'
-  font-style: normal
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-cyrillic-variable-wghtOnly-normal.woff2') format('woff2')
-  unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116
+$unicodeMap: (latin: (U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD))
 
-/* montserrat-cyrillic-ext-variable-wghtOnly-normal */
-@font-face
-  font-family: 'Montserrat'
-  font-style: normal
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-cyrillic-ext-variable-wghtOnly-normal.woff2') format('woff2')
-  unicode-range: U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F
+@mixin fontFace($weight, $style)
+  @each $subset, $unicodeRangeValues in $unicodeMap
+    @font-face
+      font-family: "Montserrat"
+      font-style: $style
+      font-weight: $weight
+      src: url("https://cdn.quasar.dev/fonts/montserrat/v25-fix-2/montserrat-#{$subset}-variable-wghtOnly-#{$style}.woff2") format("woff2-variations"), url("https://cdn.quasar.dev/fonts/montserrat/v25-fix-2/montserrat-#{$subset}-#{$weight}-#{$style}.woff2") format("woff2")
+      unicode-range: $unicodeRangeValues
 
-/* montserrat-latin-variable-wghtOnly-normal */
-@font-face
-  font-family: 'Montserrat'
-  font-style: normal
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-latin-variable-wghtOnly-normal.woff2') format('woff2')
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
+@for $weight from 3 to 8 // 300 - 700
+  @include fontFace($weight * 100, normal)
 
-/* montserrat-latin-ext-variable-wghtOnly-normal */
-@font-face
-  font-family: 'Montserrat'
-  font-style: normal
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-latin-ext-variable-wghtOnly-normal.woff2') format('woff2')
-  unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF
+@for $weight from 3 to 8 // 300 - 700
+  @include fontFace($weight * 100, italic)
 
-/* montserrat-vietnamese-variable-wghtOnly-normal */
-@font-face
-  font-family: 'Montserrat'
-  font-style: normal
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-vietnamese-variable-wghtOnly-normal.woff2') format('woff2')
-  unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+1EA0-1EF9,U+20AB
-
-
-/* montserrat-cyrillic-variable-wghtOnly-italic */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-cyrillic-variable-wghtOnly-italic.woff2') format('woff2')
-  unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116
-
-/* montserrat-cyrillic-ext-variable-wghtOnly-italic */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-cyrillic-ext-variable-wghtOnly-italic.woff2') format('woff2')
-  unicode-range: U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F
-
-/* montserrat-latin-variable-wghtOnly-italic */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-latin-variable-wghtOnly-italic.woff2') format('woff2')
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD
-
-/* montserrat-latin-ext-variable-wghtOnly-italic */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-latin-ext-variable-wghtOnly-italic.woff2') format('woff2')
-  unicode-range: U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF
-
-/* montserrat-vietnamese-variable-wghtOnly-italic */
-@font-face
-  font-family: 'Montserrat'
-  font-style: italic
-  font-display: swap
-  font-weight: 100 900
-  src: url('https://cdn.quasar.dev/fonts/montserrat/v25-fix/montserrat-vietnamese-variable-wghtOnly-italic.woff2') format('woff2')
-  unicode-range: U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+1EA0-1EF9,U+20AB
+@include fontFace(900, normal)
+@include fontFace(900, italic)
