--- a/docs/src/css/prism-theme.sass
+++ b/docs/src/css/prism-theme.sass
@@ -1,7 +1,7 @@
 .doc-code
   margin: 0
   position: relative
-  font-size: $font-size
+  font-size: ($font-size - 2px)
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
   line-height: 1.5em
   tab-size: 2
