--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -473,3 +473,30 @@ body.body--dark
     color: $dark-text
     background: linear-gradient(-225deg,$brown,$brown-9)
     box-shadow: inset 0 -2px 0 0 $brown-10, inset 0 0 1px 1px $brown-8, -1px 0 0 0 $brown, 1px 0 0 0 $brown, 0 1px 0 0 $brown
+
+.doc-card-title
+  margin-left: -12px
+  padding: 4px 8px 4px 28px
+  position: relative
+  border-radius: 3px 5px 5px 0
+  background: $void-suit
+  color: $header-btn-color--light
+  font-size: ($font-size + 2px)
+  letter-spacing: $letter-spacing-brand
+
+  &:after
+    content: ''
+    position: absolute
+    top: 100%
+    left: 0
+    width: 0
+    height: 0
+    border: 0 solid transparent
+    border-width: 9px 0 0 11px
+    border-top-color: scale-color($void-suit, $lightness: -15%)
+
+body.body--dark .doc-card-title
+  background: $floating-rock
+  color: $dark-text
+  &:after
+    border-top-color: scale-color($floating-rock, $lightness: -30%)
