fix(docs): code container -> numbered -> copy without line numbers

--- a/docs/src/css/prism-theme.sass
+++ b/docs/src/css/prism-theme.sass
@@ -26,6 +26,10 @@
   .token.inserted-sign
     background: rgba($positive, .2)
 
+  &--copying
+    .token.line-number
+      display: none
+
 body.body--light
   .doc-code
     color: $grey-9
