--- a/ui/src/css/helpers/math.sass
+++ b/ui/src/css/helpers/math.sass
@@ -21,21 +21,21 @@ $PI: 3.14159265359
 // toFixed(0.12345, 100) -> 0.12
 // toFixed(0.12345, 1000) -> 0.123
 @function toFixed($number, $power)
-  @return round($number * $power) / $power
+  @return calc(round($number * $power) / $power)
 
 @function sin($angle)
   $sin: 0
   // angle -> radians
-  $rad: $angle / 180 * $PI
+  $rad: calc($angle / 180) * $PI
   // interval determines precision
   @for $i from 0 through 25
-    $sin: $sin + pow(-1, $i) * pow($rad, (2 * $i + 1)) / fact(2 * $i + 1)
+    $sin: $sin + calc(pow(-1, $i) * pow($rad, (2 * $i + 1)) / fact(2 * $i + 1))
   @return $sin
 
 @function cos($angle)
   $cos: 0
   // angle -> radians
-  $rad: $angle / 180 * $PI
+  $rad: calc($angle / 180) * $PI
   // interval determines precision
   @for $i from 0 through 25
     $cos: $cos + pow(-1, $i) * pow($rad, 2 * $i) / fact(2 * $i)
