feat(extras): update all fonts & fix the outdated css files #16543

--- a/extras/bootstrap-icons/bootstrap-icons.css
+++ b/extras/bootstrap-icons/bootstrap-icons.css
@@ -1,12 +1,14 @@
-/* https://icons.getbootstrap.com v1.9.1 */
+/*!
+ * Bootstrap Icons v1.11.1 (https://icons.getbootstrap.com/)
+ * Copyright 2019-2023 The Bootstrap Authors
+ * Licensed under MIT (https://github.com/twbs/icons/blob/main/LICENSE)
+ */
+
 @font-face {
-  font-family: "bootstrap-icons";
-  font-style: normal;
-  font-weight: normal;
   font-display: block;
+  font-family: "bootstrap-icons";
   src: url("./bootstrap-icons.woff2") format("woff2"), url("./bootstrap-icons.woff") format("woff");
 }
-
 
 .bi::before,
 [class^="bi-"]::before,
