fix(docs): allow cursor only for the content of code containers (not also the diff/highlight containers on top)

--- a/docs/src/css/prism-theme.sass
+++ b/docs/src/css/prism-theme.sass
@@ -40,6 +40,7 @@
   &:before
     content: ' '
     position: absolute
+    pointer-events: none
     top: 0
     left: -16px
     right: -16px
@@ -56,6 +57,7 @@
     border-right: 1px solid
     content: ''
     position: absolute
+    pointer-events: none
     top: -1px
     left: -8px
     right: 8px
@@ -75,6 +77,7 @@
   &:before
     content: ''
     position: absolute
+    pointer-events: none
     top: 0
     left: -16px
     right: -16px
