chore(ui): move directives into individual folders (preparing the new testing)

--- a/ui/src/css/index.sass
+++ b/ui/src/css/index.sass
@@ -78,8 +78,8 @@
 @import '../components/virtual-scroll/QVirtualScroll.sass'
 
 /* Directives */
-@import '../directives/Ripple.sass'
-@import '../directives/Morph.sass'
+@import '../directives/ripple/Ripple.sass'
+@import '../directives/morph/Morph.sass'
 
 /* Plugins */
 @import '../plugins/Loading.sass'
