--- a/ui/src/css/index.sass
+++ b/ui/src/css/index.sass
@@ -29,8 +29,6 @@
 @import '../components/color/QColor.sass'
 @import '../components/date/QDate.sass'
 @import '../components/dialog/QDialog.sass'
-@import '../components/dialog-bottom-sheet/BottomSheet.sass'
-@import '../components/dialog-plugin/DialogPlugin.sass'
 @import '../components/editor/QEditor.sass'
 @import '../components/expansion-item/QExpansionItem.sass'
 @import '../components/fab/QFab.sass'
@@ -82,8 +80,10 @@
 @import '../directives/morph/Morph.sass'
 
 /* Plugins */
-@import '../plugins/Loading.sass'
-@import '../plugins/Notify.sass'
+@import '../plugins/bottom-sheet/component/BottomSheetComponent.sass'
+@import '../plugins/dialog/component/DialogPluginComponent.sass'
+@import '../plugins/loading/Loading.sass'
+@import '../plugins/notify/Notify.sass'
 
 /* Core */
 @import './core/animations.sass'
