--- a/extras/mdi-v7/mdi-v7.css
+++ b/extras/mdi-v7/mdi-v7.css
@@ -1,10 +1,10 @@
-/* MaterialDesignIcons.com v7.3.67 */
-
+/* MaterialDesignIcons.com v7.4.47 */
 
 @font-face {
   font-family: "Material Design Icons";
-  
-  src: url("./materialdesignicons-webfont.woff2") format("woff2"), url("./materialdesignicons-webfont.woff") format("woff");
+
+  src: url("./materialdesignicons-webfont.woff2") format("woff2"),
+    url("./materialdesignicons-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -132,6 +132,14 @@
   content: "\F0006";
 }
 
+.mdi-account-box-edit-outline::before {
+  content: "\F1CC8";
+}
+
+.mdi-account-box-minus-outline::before {
+  content: "\F1CC9";
+}
+
 .mdi-account-box-multiple::before {
   content: "\F0934";
 }
@@ -142,6 +150,10 @@
 
 .mdi-account-box-outline::before {
   content: "\F0007";
+}
+
+.mdi-account-box-plus-outline::before {
+  content: "\F1CCA";
 }
 
 .mdi-account-cancel::before {
@@ -4148,6 +4160,10 @@
   content: "\F00BE";
 }
 
+.mdi-book-open-blank-variant-outline::before {
+  content: "\F1CCB";
+}
+
 .mdi-book-open-outline::before {
   content: "\F0B63";
 }
@@ -4162,6 +4178,10 @@
 
 .mdi-book-open-variant::before {
   content: "\F14F7";
+}
+
+.mdi-book-open-variant-outline::before {
+  content: "\F1CCC";
 }
 
 .mdi-book-outline::before {
@@ -6426,6 +6446,14 @@
 
 .mdi-chart-box::before {
   content: "\F154D";
+}
+
+.mdi-chart-box-multiple::before {
+  content: "\F1CCD";
+}
+
+.mdi-chart-box-multiple-outline::before {
+  content: "\F1CCE";
 }
 
 .mdi-chart-box-outline::before {
@@ -9616,6 +9644,10 @@
   content: "\F01C8";
 }
 
+.mdi-diaper-outline::before {
+  content: "\F1CCF";
+}
+
 .mdi-dice-1::before {
   content: "\F01CA";
 }
@@ -10058,6 +10090,10 @@
 
 .mdi-download-multiple::before {
   content: "\F09E9";
+}
+
+.mdi-download-multiple-outline::before {
+  content: "\F1CD0";
 }
 
 .mdi-download-network::before {
@@ -10774,6 +10810,10 @@
 
 .mdi-ethernet-cable-off::before {
   content: "\F0202";
+}
+
+.mdi-ethernet-off::before {
+  content: "\F1CD1";
 }
 
 .mdi-ev-plug-ccs1::before {
@@ -15956,6 +15996,218 @@
   content: "\F0E4A";
 }
 
+.mdi-invoice::before {
+  content: "\F1CD2";
+}
+
+.mdi-invoice-arrow-left::before {
+  content: "\F1CD3";
+}
+
+.mdi-invoice-arrow-left-outline::before {
+  content: "\F1CD4";
+}
+
+.mdi-invoice-arrow-right::before {
+  content: "\F1CD5";
+}
+
+.mdi-invoice-arrow-right-outline::before {
+  content: "\F1CD6";
+}
+
+.mdi-invoice-check::before {
+  content: "\F1CD7";
+}
+
+.mdi-invoice-check-outline::before {
+  content: "\F1CD8";
+}
+
+.mdi-invoice-clock::before {
+  content: "\F1CD9";
+}
+
+.mdi-invoice-clock-outline::before {
+  content: "\F1CDA";
+}
+
+.mdi-invoice-edit::before {
+  content: "\F1CDB";
+}
+
+.mdi-invoice-edit-outline::before {
+  content: "\F1CDC";
+}
+
+.mdi-invoice-export-outline::before {
+  content: "\F1CDD";
+}
+
+.mdi-invoice-fast::before {
+  content: "\F1CDE";
+}
+
+.mdi-invoice-fast-outline::before {
+  content: "\F1CDF";
+}
+
+.mdi-invoice-import::before {
+  content: "\F1CE0";
+}
+
+.mdi-invoice-import-outline::before {
+  content: "\F1CE1";
+}
+
+.mdi-invoice-list::before {
+  content: "\F1CE2";
+}
+
+.mdi-invoice-list-outline::before {
+  content: "\F1CE3";
+}
+
+.mdi-invoice-minus::before {
+  content: "\F1CE4";
+}
+
+.mdi-invoice-minus-outline::before {
+  content: "\F1CE5";
+}
+
+.mdi-invoice-multiple::before {
+  content: "\F1CE6";
+}
+
+.mdi-invoice-multiple-outline::before {
+  content: "\F1CE7";
+}
+
+.mdi-invoice-outline::before {
+  content: "\F1CE8";
+}
+
+.mdi-invoice-plus::before {
+  content: "\F1CE9";
+}
+
+.mdi-invoice-plus-outline::before {
+  content: "\F1CEA";
+}
+
+.mdi-invoice-remove::before {
+  content: "\F1CEB";
+}
+
+.mdi-invoice-remove-outline::before {
+  content: "\F1CEC";
+}
+
+.mdi-invoice-send::before {
+  content: "\F1CED";
+}
+
+.mdi-invoice-send-outline::before {
+  content: "\F1CEE";
+}
+
+.mdi-invoice-text::before {
+  content: "\F1CEF";
+}
+
+.mdi-invoice-text-arrow-left::before {
+  content: "\F1CF0";
+}
+
+.mdi-invoice-text-arrow-left-outline::before {
+  content: "\F1CF1";
+}
+
+.mdi-invoice-text-arrow-right::before {
+  content: "\F1CF2";
+}
+
+.mdi-invoice-text-arrow-right-outline::before {
+  content: "\F1CF3";
+}
+
+.mdi-invoice-text-check::before {
+  content: "\F1CF4";
+}
+
+.mdi-invoice-text-check-outline::before {
+  content: "\F1CF5";
+}
+
+.mdi-invoice-text-clock::before {
+  content: "\F1CF6";
+}
+
+.mdi-invoice-text-clock-outline::before {
+  content: "\F1CF7";
+}
+
+.mdi-invoice-text-edit::before {
+  content: "\F1CF8";
+}
+
+.mdi-invoice-text-edit-outline::before {
+  content: "\F1CF9";
+}
+
+.mdi-invoice-text-fast::before {
+  content: "\F1CFA";
+}
+
+.mdi-invoice-text-fast-outline::before {
+  content: "\F1CFB";
+}
+
+.mdi-invoice-text-minus::before {
+  content: "\F1CFC";
+}
+
+.mdi-invoice-text-minus-outline::before {
+  content: "\F1CFD";
+}
+
+.mdi-invoice-text-multiple::before {
+  content: "\F1CFE";
+}
+
+.mdi-invoice-text-multiple-outline::before {
+  content: "\F1CFF";
+}
+
+.mdi-invoice-text-outline::before {
+  content: "\F1D00";
+}
+
+.mdi-invoice-text-plus::before {
+  content: "\F1D01";
+}
+
+.mdi-invoice-text-plus-outline::before {
+  content: "\F1D02";
+}
+
+.mdi-invoice-text-remove::before {
+  content: "\F1D03";
+}
+
+.mdi-invoice-text-remove-outline::before {
+  content: "\F1D04";
+}
+
+.mdi-invoice-text-send::before {
+  content: "\F1D05";
+}
+
+.mdi-invoice-text-send-outline::before {
+  content: "\F1D06";
+}
+
 .mdi-iobroker::before {
   content: "\F12E8";
 }
@@ -18504,6 +18756,14 @@
   content: "\F098B";
 }
 
+.mdi-mouse-left-click::before {
+  content: "\F1D07";
+}
+
+.mdi-mouse-left-click-outline::before {
+  content: "\F1D08";
+}
+
 .mdi-mouse-move-down::before {
   content: "\F1550";
 }
@@ -18518,6 +18778,22 @@
 
 .mdi-mouse-off::before {
   content: "\F037E";
+}
+
+.mdi-mouse-outline::before {
+  content: "\F1D09";
+}
+
+.mdi-mouse-right-click::before {
+  content: "\F1D0A";
+}
+
+.mdi-mouse-right-click-outline::before {
+  content: "\F1D0B";
+}
+
+.mdi-mouse-scroll-wheel::before {
+  content: "\F1D0C";
 }
 
 .mdi-mouse-variant::before {
@@ -21666,6 +21942,10 @@
 
 .mdi-progress-star-four-points::before {
   content: "\F1C3D";
+}
+
+.mdi-progress-tag::before {
+  content: "\F1D0D";
 }
 
 .mdi-progress-upload::before {
@@ -25644,6 +25924,10 @@
   content: "\F0FE2";
 }
 
+.mdi-swap-horizontal-hidden::before {
+  content: "\F1D0E";
+}
+
 .mdi-swap-horizontal-variant::before {
   content: "\F08C1";
 }
@@ -27700,6 +27984,10 @@
   content: "\F054B";
 }
 
+.mdi-underwear-outline::before {
+  content: "\F1D0F";
+}
+
 .mdi-undo::before {
   content: "\F054C";
 }
@@ -27760,6 +28048,22 @@
   content: "\F0552";
 }
 
+.mdi-upload-box::before {
+  content: "\F1D10";
+}
+
+.mdi-upload-box-outline::before {
+  content: "\F1D11";
+}
+
+.mdi-upload-circle::before {
+  content: "\F1D12";
+}
+
+.mdi-upload-circle-outline::before {
+  content: "\F1D13";
+}
+
 .mdi-upload-lock::before {
   content: "\F1373";
 }
@@ -27770,6 +28074,10 @@
 
 .mdi-upload-multiple::before {
   content: "\F083D";
+}
+
+.mdi-upload-multiple-outline::before {
+  content: "\F1D14";
 }
 
 .mdi-upload-network::before {
@@ -28824,6 +29132,18 @@
   content: "\F067E";
 }
 
+.mdi-weather-moonset::before {
+  content: "\F1D15";
+}
+
+.mdi-weather-moonset-down::before {
+  content: "\F1D16";
+}
+
+.mdi-weather-moonset-up::before {
+  content: "\F1D17";
+}
+
 .mdi-weather-night::before {
   content: "\F0594";
 }
@@ -29493,19 +29813,23 @@
   visibility: hidden;
 }
 
-.mdi-18px.mdi-set, .mdi-18px.mdi:before {
+.mdi-18px.mdi-set,
+.mdi-18px.mdi:before {
   font-size: 18px;
 }
 
-.mdi-24px.mdi-set, .mdi-24px.mdi:before {
+.mdi-24px.mdi-set,
+.mdi-24px.mdi:before {
   font-size: 24px;
 }
 
-.mdi-36px.mdi-set, .mdi-36px.mdi:before {
+.mdi-36px.mdi-set,
+.mdi-36px.mdi:before {
   font-size: 36px;
 }
 
-.mdi-48px.mdi-set, .mdi-48px.mdi:before {
+.mdi-48px.mdi-set,
+.mdi-48px.mdi:before {
   font-size: 48px;
 }
 
@@ -29740,4 +30064,3 @@
     transform: rotate(359deg);
   }
 }
-
