--- a/ui/src/components/layout/QLayout.sass
+++ b/ui/src/components/layout/QLayout.sass
@@ -138,7 +138,7 @@ body.q-ios-padding
     padding-top: env(safe-area-inset-top)
     min-height: calc(env(safe-area-inset-top) + #{$toolbar-min-height})
   .q-layout--standard .q-footer > .q-toolbar:last-child,
-  .q-layout--standard .q-footer > .q-tabs:nth-last-child(2) .q-tabs__content,
+  .q-layout--standard .q-footer > .q-tabs:nth-last-child(1 of :not(.q-layout__shadow)) .q-tabs__content,
   .q-layout--standard .q-drawer--top-padding .q-drawer__content
     padding-bottom: env(safe-area-inset-bottom)
     min-height: calc(env(safe-area-inset-bottom) + #{$toolbar-min-height})
